# himawari-dl

./: .gitignore  CMakeLists.txt  README.md
include/: http_utils.h  img_config.h  img_processing.h
src/: http_utils.c  img_config.c  img_processing.c  main.c
